--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="container">
     <h1>Welcome! 👋</h1>
 
-    <p>Hi, I’m <strong>Ayman Al-Abdullah</strong>. I help 7-figure founders become 9-figure CEOs — working to scale businesses, build teams, and guide companies through growth without burnout. :contentReference[oaicite:5]{index=5}</p>
+    <p>Hi, I’m <strong>Ayman Al-Abdullah</strong>. I help 7-figure founders become 9-figure CEOs — working to scale businesses, build teams, and guide companies toward sustainable growth.</p>
 
     <p>I’m new to GitHub and created this page to start sharing resources, tools, and small projects that support my work, growth strategies, and the many ventures I’m involved in.</p>
 
